<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:stretchColumns="*"
    tools:context="com.example.ricardom.tet2016.Principal">

    <FrameLayout>
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/principal_img"
        android:scaleType="centerCrop"
        android:src="@drawable/whitecity" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mask"
            />

        <ImageView
            android:layout_width="290dp"
            android:layout_height="140dp"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_logo2"
            android:layout_margin="@dimen/small"
            />
    </FrameLayout>


    <TableLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TableRow
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            >

            <ImageView
                android:layout_width="@dimen/principal_icon"
                android:layout_height="@dimen/principal_icon"
                android:layout_marginRight="@dimen/small"
                android:src="@drawable/ic_des" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                >
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/principal_objetivo"
                    android:textColor="@color/textTitle"
                    android:layout_marginBottom="@dimen/small"
                    />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBody"
                    android:text="@string/principal_obj_content" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            >

            <ImageView
                android:layout_width="@dimen/principal_icon"
                android:layout_height="@dimen/principal_icon"
                android:layout_marginRight="@dimen/small"
                android:src="@drawable/ic_calender" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                >
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/principal_fecha"
                    android:textColor="@color/textTitle"
                    android:layout_marginBottom="@dimen/small"
                    />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBody"
                    android:text="@string/principal_fecha_content" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            >

            <ImageView
                android:layout_width="@dimen/principal_icon"
                android:layout_height="@dimen/principal_icon"
                android:layout_marginRight="@dimen/small"
                android:src="@drawable/ic_ubi" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                >
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/principal_ubicacion"
                    android:textColor="@color/textTitle"
                    android:layout_marginBottom="@dimen/small"
                    />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBody"
                    android:text="@string/principal_ubi_content" />

            </LinearLayout>
        </TableRow>

    </TableLayout>


    <TableRow
        android:paddingBottom="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout>
            <LinearLayout
                android:id="@+id/btnPonentes"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_ponentes"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_ponentes"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>


        </FrameLayout>
        <FrameLayout>
            <LinearLayout
                android:id="@+id/btnHorario"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_horario"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_horario"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>

        </FrameLayout>
        <FrameLayout>

            <LinearLayout
                android:id="@+id/btnMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_ubicacion"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_ubi"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>
        </FrameLayout>




    </TableRow>

</TableLayout>
