<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:stretchColumns="*"
    >
<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:context="com.example.ricardom.tet2016.MapsEvent" />

    <TableRow
        android:paddingBottom="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout>
            <LinearLayout
                android:id="@+id/btnPonentes"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_ponentes"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_ponentes"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>


        </FrameLayout>

        <FrameLayout>

            <LinearLayout
                android:id="@+id/btnMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_principal"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_principal"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout>
            <LinearLayout
                android:id="@+id/btnHorario"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="@dimen/icon_btn"
                    android:layout_height="@dimen/icon_btn"
                    android:src="@drawable/ic_horario"
                    />
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_horario"
                    android:textColor="@color/txtBtn"
                    />
            </LinearLayout>

        </FrameLayout>





    </TableRow>

</TableLayout>